--- a/Views/MyBookings.xaml
+++ b/Views/MyBookings.xaml
@@ -2,10 +2,14 @@
     x:Class="School.OnlineBookingSystem.Views.MyBookings"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:School.OnlineBookingSystem.Views"
+    xmlns:viewmodels="using:School.OnlineBookingSystem.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:models="using:School.OnlineBookingSystem.Models"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+    <Page.DataContext>
+        <viewmodels:MyAccount x:Name="Vm"></viewmodels:MyAccount>
+    </Page.DataContext>
 
     <Grid >
         <Grid.Background>
@@ -14,17 +18,54 @@
                 <GradientStop Color="#FFA20D0D" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <GridView Margin="0,10,0,-10">
-            <StackPanel Width="575" Height="710" >
-                <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="81,132,0,0" TextWrapping="Wrap" Text="NAME" FontSize="22" VerticalAlignment="Top" Height="41" Width="137"/>
-
-            </StackPanel>
-            <StackPanel Height="683" Width="689">
-                <TextBlock x:Name="myBookingTextBlock" FontSize="30" HorizontalAlignment="Center" Margin="317,132,171,0" TextWrapping="Wrap" Text="My Bookings" VerticalAlignment="Top" Width="201"/>
-                <ListView>
-                    
-                </ListView>
-            </StackPanel>
-        </GridView>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="2*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <TextBlock Text="My Account"
+                   FontSize="35"
+                   Grid.ColumnSpan="2"
+                   Margin="10"></TextBlock>
+        <TextBlock Grid.Row="1" Grid.Column="0" Text="Name:"
+                   Margin="10"></TextBlock>
+        <TextBlock Grid.Row="1" Grid.Column="1" Text="{x:Bind Vm.LoggedUserSingleton.LoggedAccount.FullName}"
+                   Margin="10"></TextBlock>
+        <TextBlock Grid.Row="2" Grid.Column="0" Text="Username:"
+                   Margin="10"></TextBlock>
+        <TextBlock Grid.Row="2" Grid.Column="1" Text="{x:Bind Vm.LoggedUserSingleton.LoggedAccount.Username}"
+                   Margin="10"></TextBlock>
+        <TextBlock Grid.Row="3" Grid.Column="0" Text="Email:"
+                   Margin="10"></TextBlock>
+        <TextBlock Grid.Row="3" Grid.Column="1" Text="{x:Bind Vm.LoggedUserSingleton.LoggedAccount.Email}"
+                   Margin="10"></TextBlock>
+        <TextBlock Grid.Row="4" Grid.Column="0" Text="Phone Number:"
+                   Margin="10"></TextBlock>
+        <TextBlock Grid.Row="4" Grid.Column="1" Text="{x:Bind Vm.LoggedUserSingleton.LoggedAccount.PhoneNumber}"
+                   Margin="10"></TextBlock>
+        <TextBlock Text="My Bookings"
+                   FontSize="35"
+                   Grid.Row="0" Grid.Column="2"
+                   Margin="10"/>
+        <ListView Grid.Row="1" Grid.Column="2"
+                  Grid.RowSpan="4"
+                  ItemsSource="{x:Bind Vm.LoggedUserSingleton.LoggedAccount.Bookings}">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="models:Booking">
+                    <StackPanel>
+                        <TextBlock Text="{x:Bind ApartmentId}"></TextBlock>
+                        <TextBlock Text="{x:Bind CheckInDate.Date}"></TextBlock>
+                        <TextBlock Text="{x:Bind CheckOutDate.Date}"></TextBlock>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
