--- a/Views/FrontPage.xaml
+++ b/Views/FrontPage.xaml
@@ -45,13 +45,13 @@
 
 
 
-    <Grid>
+    <Grid  Opacity="1.1" >
         <Grid.Background>
             <ImageBrush Stretch="Fill" ImageSource="ms-appx:///Images/WorldWide.jpg"/>
         </Grid.Background>
 
-        <Button x:Name="button"  FontSize="22" HorizontalAlignment="Left" Margin="60,250,0,0" VerticalAlignment="Top" RenderTransformOrigin="-7.615,-0.312" Width="337" Height="60">
-            <StackPanel Width="337" Margin="-185,-22,-152,-22">
+        <Button x:Name="button"  ClickMode="Hover" FontSize="22" HorizontalAlignment="Left" Margin="60,250,0,0" VerticalAlignment="Top" RenderTransformOrigin="-7.615,-0.312" Width="337" Height="60" BorderThickness="0">
+            <StackPanel  Width="337" Margin="-185,-22,-152,-22">
                 <StackPanel.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black" Offset="0"/>
@@ -63,14 +63,17 @@
             </StackPanel>
 
             <Button.Flyout   >
-                <Flyout  Placement="Bottom"  >
-                    <StackPanel  Height="166" Width="385">
+                <Flyout   Placement="Bottom"  >
+                    <StackPanel  Height="166" Width="385" 
+         >
+                       
                         <StackPanel.Background>
-                            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <LinearGradientBrush  EndPoint="0.5,1" StartPoint="0.5,0">
                                 <GradientStop Color="Black" Offset="0"/>
-                                <GradientStop Color="#FFEA1919" Offset="1"/>
+                                <GradientStop Color="#19AC0B0B" Offset="1"/>
                             </LinearGradientBrush>
                         </StackPanel.Background>
+
                         <TextBlock TextWrapping="Wrap" Text="hvugvvvvguvvvvvvvvvgyvvvvvvvvvvvv jkjk hkkh hbjkl hkh hjgk gjhk hkk khhhhhhh hkk hk kh khb khhhh khkhkhkh hkkkkhh hkhk khhkk klkh khhk khk jhk hgk jkkk gkk jkjk kk " ></TextBlock>
                         <TextBlock Text="USA" Margin="2,10,18,10" FontWeight="Bold" FontFamily="Segoe UI Black" />
                         <TextBlock Text="CANADA" Margin="2,10,18,10" FontWeight="Bold" />
@@ -81,7 +84,7 @@
             </Button.Flyout>
 
         </Button>
-        <Button x:Name="button1"  HorizontalAlignment="Left" Margin="480,244,0,0" VerticalAlignment="Top" Width="337" Height="60">
+        <Button x:Name="button1" ClickMode="Hover"  HorizontalAlignment="Left" Margin="480,244,0,0" VerticalAlignment="Top" Width="337" Height="60">
             <StackPanel Height="60" Margin="-169,0,-158,-12"  >
                 <StackPanel.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -114,7 +117,7 @@
             </Button.Flyout>
 
         </Button>
-        <Button x:Name="button2"  HorizontalAlignment="Left" Margin="900,248,0,0" VerticalAlignment="Top" Height="60" Width="337" RenderTransformOrigin="0.248,0.5">
+        <Button x:Name="button2" ClickMode="Hover"  HorizontalAlignment="Left" Margin="900,248,0,0" VerticalAlignment="Top" Height="60" Width="337" RenderTransformOrigin="0.248,0.5">
             <StackPanel Height="60" Width="337" Margin="-60,-2,-56,-10">
                 <StackPanel.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -149,16 +152,8 @@
 
 
         </Button>
-        <StackPanel HorizontalAlignment="Left" Height="70" Margin="405,55,0,0" VerticalAlignment="Top" Width="490">
-            <StackPanel.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black" Offset="0"/>
-                    <GradientStop Color="Red" Offset="1"/>
-                </LinearGradientBrush>
-            </StackPanel.Background>
-            <TextBlock FontSize="50" Foreground="White"  HorizontalAlignment="Left"   Text="FRANCE VACANCES" VerticalAlignment="Top" Height="75" Width="486"  FontWeight="Bold" FontFamily="Segoe UI Black" Padding="2,9,5,5" Margin="15,0,-11,0"/>
+        <Image x:Name="image" HorizontalAlignment="Left" Height="192" Margin="452,12,0,0" VerticalAlignment="Top" Width="320" Stretch="UniformToFill" Source="ms-appx:///Assets/SplashScreen.png"/>
 
-        </StackPanel>
 
 
 
