--- a/Views/SearchPage.xaml
+++ b/Views/SearchPage.xaml
@@ -22,10 +22,14 @@
         </TransitionCollection>
     </Page.Transitions>
 
-    <Grid Margin="10">
+    <Grid >
         <Grid.Background>
-            <ImageBrush Stretch="Fill" ImageSource="ms-appx:///Assets/WorldWide.jpg"/>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="Black" Offset="0"/>
+                <GradientStop Color="#FFD80D0D" Offset="1"/>
+            </LinearGradientBrush>
         </Grid.Background>
+
         <CalendarDatePicker HorizontalAlignment="Left" 
                             Margin="195,232,0,0" 
                             VerticalAlignment="Top" 
@@ -33,14 +37,7 @@
                             Foreground="White" 
                             BorderBrush="Black"
                             x:Name="CalendarDatePicker">
-            <Interactivity:Interaction.Behaviors>
-                <Core:EventTriggerBehavior EventName="DateChanged">
-                    <Core:EventTriggerBehavior.Actions>
-                        <Core:InvokeCommandAction Command="{x:Bind Vm.CheckInDateChanged}"
-                                                  CommandParameter="{x:Bind CalendarDatePicker.Date}"/>
-                    </Core:EventTriggerBehavior.Actions>
-                </Core:EventTriggerBehavior>
-            </Interactivity:Interaction.Behaviors>
+            
         </CalendarDatePicker>
         <CalendarDatePicker HorizontalAlignment="Left" 
                             Margin="413,233,0,0" 
