--- a/Views/SearchPage.xaml
+++ b/Views/SearchPage.xaml
@@ -24,109 +24,84 @@
 
     <Grid >
         <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="Black" Offset="0"/>
-                <GradientStop Color="#FFD80D0D" Offset="1"/>
-            </LinearGradientBrush>
+            <ImageBrush Stretch="Fill" ImageSource="ms-appx:///Images/WorldWide.jpg"/>
         </Grid.Background>
 
-        <CalendarDatePicker HorizontalAlignment="Left" 
-                            Margin="195,232,0,0" 
-                            VerticalAlignment="Top" 
+
+        <Grid Background="Blue" Opacity="0.8" HorizontalAlignment="Left" Height="556" Margin="125,60,0,0" VerticalAlignment="Top" Width="545">
+            <CalendarDatePicker 
+                           
+                           
                             Background="Black" 
                             Foreground="White" 
                             BorderBrush="Black"
-                            x:Name="CalendarDatePicker">
-            
-        </CalendarDatePicker>
-        <CalendarDatePicker HorizontalAlignment="Left" 
-                            Margin="413,233,0,0" 
-                            VerticalAlignment="Top" 
+                            x:Name="CalendarDatePicker" Margin="84,161,0,344" Height="51" Width="133"/>
+            <CalendarDatePicker 
                             BorderBrush="Black" 
-                            Background="Black"/>
-        <TextBlock x:Name="textBlock_Copy" 
-                   HorizontalAlignment="Left" 
-                   Margin="417,197,0,0" 
+                            Background="Black" Margin="321,160,0,364"/>
+            <TextBlock x:Name="textBlock_Copy" 
                    TextWrapping="Wrap" 
                    Text="Check out" 
                    VerticalAlignment="Top" 
                    FontSize="18" 
                    FontWeight="Bold" 
-                   Foreground="White"/>
-        <TextBlock x:Name="textBlock_Copy1"
-                   HorizontalAlignment="Left" 
-                   Margin="234,98,0,0" 
-                   TextWrapping="Wrap"
-                   Text="Going to" 
-                   VerticalAlignment="Top" 
-                   FontSize="22" 
-                   Foreground="White" 
-                   FontWeight="Bold"
-                   FontFamily="Segoe UI Black"/>
-        <ComboBox x:Name="comboBox"  
-                  HorizontalAlignment="Left" 
-                  Margin="195,309,0,0" 
-                  VerticalAlignment="Top" 
+                   Foreground="White" Margin="330,117,99,0" Height="45"/>
+            <TextBlock x:Name="textBlock_Copy1" 
+                TextWrapping="Wrap" 
+                Text="Check in" 
+                VerticalAlignment="Top" 
+                FontSize="18" 
+                FontWeight="Bold" 
+                Foreground="White" Margin="93,117,336,0" Height="45"/>
+            <ComboBox x:Name="comboBox"  
                   Width="129" 
                   BorderBrush="Black" 
                   Background="Black" 
-                  Height="32">
-            <ComboBoxItem Content="1"/>
-            <ComboBoxItem Content="2"/>
-            <ComboBoxItem Content="3"/>
-            <ComboBoxItem Content="4"/>
-            <ComboBoxItem Content="5"/>
-            <ComboBoxItem Content="6"/>
-            <ComboBoxItem Content="7"/>
-        </ComboBox>
-        <TextBlock x:Name="textBlock1" 
-                   HorizontalAlignment="Left" 
-                   Margin="207,279,0,0" 
-                   TextWrapping="Wrap" 
-                   Text="Adult(18+)"
-                   VerticalAlignment="Top" 
-                   FontSize="18" 
-                   FontWeight="Bold" 
-                   Foreground="White"/>
-        <ComboBox x:Name="comboBox1" 
-                  HorizontalAlignment="Left" 
-                  Margin="418,306,0,0" 
-                  VerticalAlignment="Top" 
-                  Width="127" 
-                  Background="Black" 
-                  BorderBrush="Black" 
-                  Height="32">
-            <ComboBoxItem Content="1"/>
-            <ComboBoxItem Content="2"/>
-            <ComboBoxItem Content="3"/>
-            <ComboBoxItem Content="4"/>
-            <ComboBoxItem Content="5"/>
-            <ComboBoxItem Content="6"/>
-            <ComboBoxItem Content="7"/>
-        </ComboBox>
-        <TextBlock x:Name="textBlock1_Copy" 
-                   HorizontalAlignment="Left" 
-                   Margin="422,279,0,0" 
-                   TextWrapping="Wrap" 
-                   Text="Children(0-17)" 
-                   VerticalAlignment="Top" 
-                   FontSize="18" 
-                   FontWeight="Bold" 
-                   Foreground="White"/>
-        <Image x:Name="image" 
-               HorizontalAlignment="Left" 
-               Height="240" 
-               Margin="905,98,0,0" 
-               VerticalAlignment="Top" 
-               Width="412"/>
-        <TextBlock x:Name="textBlock_Copy2" 
-                   HorizontalAlignment="Left" 
-                   Margin="205,197,0,0" 
-                   TextWrapping="Wrap" 
-                   Text="Check in" 
-                   VerticalAlignment="Top" 
-                   FontSize="18" 
-                   FontWeight="Bold" 
-                   Foreground="White"/>
+                  Height="32" Margin="84,279,0,0">
+                <ComboBoxItem Content="1"/>
+                <ComboBoxItem Content="2"/>
+                <ComboBoxItem Content="3"/>
+                <ComboBoxItem Content="4"/>
+                <ComboBoxItem Content="5"/>
+                <ComboBoxItem Content="6"/>
+                <ComboBoxItem Content="7"/>
+            </ComboBox>
+            <ComboBox x:Name="comboBox_Copy"  
+                Width="129" 
+                BorderBrush="Black" 
+                Background="Black" 
+                Height="32" Margin="315,279,0,0">
+                <ComboBoxItem Content="1"/>
+                <ComboBoxItem Content="2"/>
+                <ComboBoxItem Content="3"/>
+                <ComboBoxItem Content="4"/>
+                <ComboBoxItem Content="5"/>
+                <ComboBoxItem Content="6"/>
+                <ComboBoxItem Content="7"/>
+            </ComboBox>
+            <TextBlock x:Name="textBlock_Copy2" 
+                TextWrapping="Wrap" 
+                Text="Adult(18+)" 
+                VerticalAlignment="Top" 
+                FontSize="18" 
+                FontWeight="Bold" 
+                Foreground="White" Margin="93,231,336,0" Height="45"/>
+            <TextBlock x:Name="textBlock_Copy3" 
+                TextWrapping="Wrap" 
+                Text="Children(0-17)" 
+                VerticalAlignment="Top" 
+                FontSize="18" 
+                FontWeight="Bold" 
+                Foreground="White" Margin="324,231,68,0" Height="45"/>
+
+        </Grid>
+        <FlipView x:Name="flipView" HorizontalAlignment="Left" Margin="760,165,0,0" VerticalAlignment="Top" Width="470" Height="310">
+            <Image Stretch="UniformToFill" Source="ms-appx:///Images/SkiResorts/KohNorHotel/valthorens_kohlnorhotel1.jpg" ></Image>
+          <Image Stretch="UniformToFill" Source="ms-appx:///Images/SkiResorts/BordersLodge/bc_borderslodge1_wynbcvl.jpg"></Image>
+            <Image Stretch="UniformToFill" Source="ms-appx:///Images/Grit/Marcin'svilla/1.jpg"  />
+            <Image Stretch="UniformToFill" Source="ms-appx:///Images/Grit/Peter'sVilla/1.jpg"  ></Image>
+            <Image Stretch="UniformToFill" Source="ms-appx:///Images/1.jpg"  ></Image>
+        </FlipView>
+
     </Grid>
 </Page>
